# bitformat

./: Cargo.toml  README.md  ROADMAP.md
src/: byte_list.rs  byte_source.rs  color.rs  lib.rs  qword_table.rs  websocket_frame.rs
src/websocket_frame/: websocket_opcode.rs
